--- a/style.css
+++ b/style.css
@@ -78,10 +78,7 @@ button:hover{
     position: relative;
     margin-left: 7%;
     left: -5%;
-    /* animation-name: comeIn;
-    animation-duration: .9s;
-    /* animation-timing-function: 2; 
-    animation-fill-mode: forwards; */
+    transition: transform 1s;
 }
 .animate {
     animation-name: comeIn;
@@ -435,6 +432,7 @@ h3{
 }
 
 .slider-wrapper {
+    display: grid;
     position: relative;
     overflow: hidden;
     margin: 0 auto;
@@ -442,51 +440,41 @@ h3{
 }
 
 .slider-container {
-    display: inline-block;
+    display: flex;
+    position: relative;
     vertical-align: top;
+    align-items: center;
+    width: 90%;
     width: calc(250px * 9);
-    animation: scroll 7s linear infinite;
+    transition: transform 1s;
+    animation: scroll 20s linear infinite;
 }
 @keyframes scroll {
     0%{
         transform: translateX(0);
     }
-    100%{transform: translateX(calc(-250px * 9));}
+    100%{
+        transform: translateX(calc(-200px * 9));
+    }
 }
 
 .slider {
-    display: flex;
-    justify-content: space-around;
-    transition: transform 0.5s ease;
+    display: flex; 
 }
 
-.slide {
-    flex: 0 0 20%; 
-    width: 30%;
+
+.slide { 
+    width: 200px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    perspective: 100px;
 }
 .slide img{
-    width: 250px;
-    transition: transform 2s;
+    width: 200px;
+    transition: transform 1s;
 }
 .slide img:hover{
-    transform: translateZ(30px);
-}
-
-.prev, .next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: #ffb400;
-    border: none;
-    cursor: pointer;
-    padding: 10px;
-    z-index: 100;
-}
-
-.prev {
-    left: 0;
-}
-
-.next {
-    right: 0;
+    transform: translateZ(20px);
 }
