--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ li{
     font-weight: 600;
     font-size: 16px;
 }
-li:hover{
+li a:hover{
     color: #ffa300;
 }
 button{
@@ -73,9 +73,9 @@ button:hover{
     background-image: url(slider-3.webp);
 }
 .herotext{
-    margin-top: -90px;
+    margin-top: -80px;
     width: 40%;
-    padding: 10% 5% 2% 12%;
+    padding: 10% 5% 3% 12%;
     position: relative;
     transition: transform 1s;
 }
@@ -101,7 +101,7 @@ h1{
 h2{
     font-family: "Playfair Display", serif;
     font-size: 45px;
-    margin-top: 23px;
+    margin-top: 19px;
     line-height: 1.1;
 }
 h4{
@@ -110,7 +110,7 @@ h4{
 }
 p{
     font-size: 20px;
-    margin-top: 22px;
+    margin-top: 15px;
     line-height: 1.1;
 }
 h6{
@@ -183,9 +183,11 @@ h6{
     width: 100px;
     height: 100px;
     padding: 10px;
-    border-radius: 50%;background-color: #52565b2c;
+    border-radius: 50%;
+    background-color: #52565b2c;
     align-items: center;
 }
+    
 .hcard img{
     width: 70px;
     height: 70px;
@@ -204,10 +206,15 @@ h6{
     border-radius: 50%;
     background-color: #ffa300;
     color: white;
-    display: none;
+    visibility: hidden;
+    transition: visibility 0.5s;
+    
 }
 .hcard:hover .hforward{
-    display: flex;
+    visibility: visible;
+}
+.hcard:hover .card-img{
+    background-color: #094435cc;
 }
 .about{
     padding: 5% 12%;
@@ -264,12 +271,13 @@ h6{
     align-items: center;
     flex-wrap: wrap;
     width: 29%;
-    padding-bottom: 5px;
+    padding-bottom: 25px;
     margin: 5% 1% 1% 1%;
     font-size: 35px;
     text-align: center;
     position: relative;
     height: 400px;
+    background-color: #F8F6F4;
 }
 .bcard, .tcard, .footer{
     display: flex;
@@ -277,12 +285,22 @@ h6{
     flex-wrap: wrap;
     overflow: hidden;
     justify-content: space-evenly;
+    align-items: center;
+}
+.bButton{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
 }
 .btitle{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url(textBackground.webp);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100px;
 }
 .blogCard span{
     display: block;
@@ -298,7 +316,7 @@ h6{
     margin: 0 auto;
     text-align: center;
     position: absolute;
-    bottom: 35%;
+    bottom: 40%;
 }
 .bcard ul{
     display: flex;
@@ -390,10 +408,18 @@ h6{
     flex-wrap: wrap;
     text-align: center;
     align-items: center;
+    position: relative;
+    background: #fff;
+}
+.simg{
+    height: 30%;
+    position: absolute;
+    top: 25%;
+    right: 0%;
 }
 .subdivp{
     background-color: #f8f6f4;
-    padding: 5%;
+    padding: 6% 0px 3% 0px;
     width: 100%;
 }
 .brand{
@@ -455,6 +481,11 @@ h6{
     background-color: #fff;
     padding: 5% 10%;
 }
+.ad{
+    background-color: #ffb400;
+    position: relative;
+    overflow: hidden;
+}
 .ad ul{
     display: flex;
     flex-direction: row;
@@ -463,6 +494,21 @@ h6{
 .ad ul li img{
     border: 7px#ffb400 solid;
     border-radius: 7px;
+}
+.adleaf1{
+    position: absolute;
+    bottom: -10%;
+    left: 2%;
+    rotate: 230deg;
+}
+.adleaf2{
+    position: absolute;
+    top: -7%;
+    right: 10%;
+    rotate: 180deg;
+}
+.footer{
+    align-items: flex-start;
 }
 .footerWrap{
     background-color: #0a4d3c;
@@ -563,3 +609,33 @@ h3{
 .slide img:hover{
     transform: translateZ(20px);
 }
+.aMission{
+    display: flex;
+    padding: 3% 5%;
+    background-color: #F8F6F4;
+}
+.firstMis{
+    margin: 5% 10%;
+    width: 55%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.secMis{
+    width: 45%;
+    margin: 5% 6% 5% 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: start;
+}
+.secMis li{
+    list-style: disc;
+}
+.secMis li::marker {
+    color: #ffb400;
+    font-size: 35px;
+  }
+  .secMis button{
+    background-color: #ffb400;
+  }
