--- a/style.css
+++ b/style.css
@@ -37,10 +37,18 @@ nav{
 }
 li{
     list-style: none;
+    font-weight: 600;
+    font-size: 16px;
+    color: #52565b;
+    padding: 0 14px;
+}
+li a{
+    text-decoration: none;
     position: relative;
     padding: 0 24px;
     font-weight: 600;
     font-size: 16px;
+    color: #52565b;
 }
 li a:hover{
     color: #ffa300;
@@ -287,11 +295,6 @@ h6{
     justify-content: space-evenly;
     align-items: center;
 }
-.bButton{
-    display: flex;
-    justify-content: center;
-    margin-top: 5%;
-}
 .btitle{
     display: flex;
     flex-direction: column;
@@ -339,7 +342,7 @@ h6{
     position: relative;
 }
 .testmonial p{
-    line-height: 2;
+    line-height: 2.3;
 }
 .leaf1{
     position: absolute;
@@ -552,6 +555,9 @@ h3{
 .copyright ul{
     display: flex;
 }
+.copyright ul li a{
+    color: #fff;
+}
 .copyright p{
     font-size: 15px;
     margin-top: 0px;
@@ -640,9 +646,6 @@ h3{
     color: #ffb400;
     font-size: 35px;
   }
-  .secMis button{
-    background-color: #ffb400;
-  }
   .contact{
     display: flex;
     margin: 5% 15%;
@@ -693,4 +696,73 @@ h3{
     right: -65px;
     width: 70%;
     rotate: 90deg;
+  }
+  .signupwrap{
+    display: flex;
+    justify-content: center;
+    padding: 9%;
+  }
+  .signup-form{
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+  }
+  .signup-form input{
+    width: 90%;
+    border: 0.5px #CEDBD8 solid;
+    border-radius: 0%;
+    padding: 15px;
+  }
+  .signup-form button{
+    margin-top: 9%;
+  }
+  .sForm{
+    background-color: #F8F6F4;
+    padding: 4%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .ybtn{
+    background-color: #ffb400;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 0 40px;
+    height: 55px;
+    line-height: 55px;
+    cursor: pointer;
+    border-radius: 50px;
+    margin-top: 15px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+  }
+  .lostpswd p{
+    display: flex;
+    font-size: 10px;
+    justify-content: center;
+    text-align: center;
+  }
+  .lostpswd a{
+    display: flex;
+    font-size: 15px;
+    color: #52565b;
+    text-decoration: none;
+    margin-top: 10px;
+  }
+  .main-description{
+    position: relative;
+  }
+  .playBtn{
+    position: absolute;
+  }
+  .mainImg{
+    position: relative;
+  }
+  .courseWrap{
+    display: flex;
   }
